tests/snapshots/pre_reduce_run@tests::programs::church_mul.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/church_mul.hvm
---
(#1{(a #1{b #1{c #1{d #1{e #1{f #1{g #1{h #1{i #1{j #1{k #1{l #1{m #1{n #1{o #1{p #1{q #1{r #1{s #1{t u}}}}}}}}}}}}}}}}}}}) #1{(v a) #1{(w v) #1{(x w) #1{(y x) #1{(z y) #1{(aa z) #1{(ab aa) #1{(ac ab) #1{(ad ac) #1{(ae ad) #1{(af ae) #1{(ag af) #1{(ah ag) #1{(ai ah) #1{(aj ai) #1{(ak aj) #1{(al ak) #1{(am al) (#1{c #1{d #1{e #1{f #1{g #1{h #1{i #1{j #1{k #1{l #1{m #1{n #1{o #1{p #1{q #1{r #1{s #1{t #1{u an}}}}}}}}}}}}}}}}}}} am)}}}}}}}}}}}}}}}}}}} (an b))
pre-reduce:
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               0
run:
RWTS   :             167
- ANNI :              25
- COMM :              19
- ERAS :               0
- DREF :             123
- OPER :               0
