tests/snapshots/pre_reduce_run@tests::programs::era_era.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/era_era.hvm
---
*
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :               3
- ANNI :               0
- COMM :               0
- ERAS :               1
- DREF :               2
- OPER :               0
