tests/snapshots/pre_reduce_run@tests::programs::f32.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/f32.hvm
---
[~inf [~-inf [~NaN [~2.5 [~-1.5 [~1.15 [~0.25 [~0.5 [~0 [~1 [~1 [~0 [~0 [~0 [~0 [~0 [~0 [~NaN [~inf [~-inf [~1.02 *]]]]]]]]]]]]]]]]]]]]]
pre-reduce:
RWTS   :               4
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               2
run:
RWTS   :              84
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              63
- OPER :              21
