tests/snapshots/pre_reduce_run@tests::programs::heavy_pre_reduction.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/heavy_pre_reduction.hvm
---
*
pre-reduce:
RWTS   :          53_165
- ANNI :          13_137
- COMM :          35_175
- ERAS :           4_794
- DREF :              59
- OPER :               0
run:
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               0
