tests/snapshots/pre_reduce_run@tests::programs::neg_fusion.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/neg_fusion.hvm
---
(a (* a))
pre-reduce:
RWTS   :              83
- ANNI :              42
- COMM :               7
- ERAS :               0
- DREF :              34
- OPER :               0
run:
RWTS   :              81
- ANNI :              43
- COMM :              29
- ERAS :               0
- DREF :               9
- OPER :               0
