tests/snapshots/pre_reduce_run@tests::programs::numeric_casts.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/numeric_casts.hvm
---
{0 {1234 {4321 {16771538 {2 {0 {16777215 {16777215 {0 {0 {+0 {+1234 {+4321 {-5678 {+2 {-12 {+8388607 {-8388608 {+8388607 {-8388608 {+0 {+NaN {+inf {-inf {2.1500244 {-2.1500244 {0.15000153 {-1234.0 {1234.0 {123456.0 {16775936.0 {[u24] {[i24] {[f24] *}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}
pre-reduce:
RWTS   :             167
- ANNI :              33
- COMM :               1
- ERAS :              34
- DREF :              68
- OPER :              31
run:
RWTS   :              75
- ANNI :               1
- COMM :               0
- ERAS :               1
- DREF :              73
- OPER :               0
